--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^5.7.0",
     "mongoose": "^4.4.9",
     "morgan": "^1.7.0",
+    "request": "^2.72.0",
     "winston": "^2.2.0",
     "winston-loggly": "^1.3.1"
   },
